--- a/mvc/.settings/org.eclipse.buildship.core.prefs
+++ b/mvc/.settings/org.eclipse.buildship.core.prefs
@@ -5,9 +5,9 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/dev/java/program/jdk-17.0.13+11
+java.home=
 jvm.arguments=
 offline.mode=false
-override.workspace.settings=true
-show.console.view=true
-show.executions.view=true
+override.workspace.settings=false
+show.console.view=false
+show.executions.view=false
