--- a/todo/.settings/org.eclipse.buildship.core.prefs
+++ b/todo/.settings/org.eclipse.buildship.core.prefs
@@ -5,9 +5,9 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=
+java.home=C\:/dev/java/program/jdk-17.0.13+11
 jvm.arguments=
 offline.mode=false
-override.workspace.settings=false
+override.workspace.settings=true
 show.console.view=false
 show.executions.view=false
