--- a/todo/bin/main/application.properties
+++ b/todo/bin/main/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/todo_project
 spring.datasource.username=scott
 spring.datasource.password=tiger
 ffupload.location=/app/upload/
-
+spring.profiles.include=secret
