[곽도영] GitHub Action 동작 유무 확인

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          script: 
+          script: |
+            cd /home/ubuntu/app/todo
+            ls -l
+            echo "Check GitHub Action Working"
           
